--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@xterm/addon-fit": "0.9.0",
     "@xterm/addon-web-links": "0.10.0",
     "@xterm/xterm": "5.4.0",
+    "d3": "^7.8.5",
+    "date-fns": "^3.3.1",
     "dexie": "^3.2.6",
     "lucide-react": "0.344.0",
+    "marked": "^12.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
-    "zustand": "4.5.2",
-    "d3": "^7.8.5",
-    "marked": "^12.0.0",
-    "date-fns": "^3.3.1"
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
@@ -40,6 +40,6 @@
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "5.2.2",
-    "vite": "5.1.6"
+    "vite": "^5.4.11"
   }
 }
